modified intro section index.html and css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Scrollama Demo: Fixed CSS</title>
-	<meta name="description" content="Scrollama Demo: Fixed CSS">
+	<title>The Bitcoin Labor Economy</title>
+	<meta name="description" content="The Bitcoin Labor Economy: Global Footprint and Issues of Access (2018)">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
@@ -16,12 +16,9 @@
 <body>
 	<div>
 	<section id='intro'>
-		<p class='intro__overline'>
-			<a href='https://github.com/russellgoldenberg/scrollama'>scrollama.js</a>
-		</p>
-		<h1 class='intro__hed'>Demo: Sticky Graphic</h1>
+		<h1 class='intro__hed'>The Bitcoin Labor Economy</h1>
 		<p class='intro__dek'>
-			Start scrolling to see how it works.
+			Global Footprint and Issues of Access (2018)
 		</p>
 	</section>
 	<section id='scroll'>
@@ -32,16 +29,24 @@
 		</div>
 		<div class='scroll__text'>
 			<div class='step' data-step='1'>
-				<p>STEP 1</p>
+				<p>Hodor! Hodor hodor, hodor - hodor, hodor, hodor hodor. Hodor. Hodor hodor hodor hodor; hodor hodor; hodor hodor? Hodor hodor, hodor. Hodor hodor; hodor hodor? Hodor. Hodor hodor - hodor? Hodor! Hodor hodor, hodor - hodor.
+					Hodor, hodor; hodor hodor - hodor?! Hodor. Hodor hodor - hodor... Hodor hodor hodor - hodor... Hodor hodor hodor? Hodor! Hodor hodor, hodor HODOR hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor - hodor hodor hodor! Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor, hodor. Hodor hodor. Hodor. Hodor. Hodor hodor, hodor. Hodor hodor - hodor hodor!
+				</p>
 			</div>
 			<div class='step' data-step='2'>
-				<p>STEP 2</p>
+				<p>Hodor! Hodor hodor, hodor - hodor, hodor, hodor hodor. Hodor. Hodor hodor hodor hodor; hodor hodor; hodor hodor? Hodor hodor, hodor. Hodor hodor; hodor hodor? Hodor. Hodor hodor - hodor? Hodor! Hodor hodor, hodor - hodor.
+					Hodor, hodor; hodor hodor - hodor?! Hodor. Hodor hodor - hodor... Hodor hodor hodor - hodor... Hodor hodor hodor? Hodor! Hodor hodor, hodor HODOR hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor - hodor hodor hodor! Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor, hodor. Hodor hodor. Hodor. Hodor. Hodor hodor, hodor. Hodor hodor - hodor hodor!
+				</p>
 			</div>
 			<div class='step' data-step='3'>
-				<p>STEP 3</p>
+				<p>Hodor! Hodor hodor, hodor - hodor, hodor, hodor hodor. Hodor. Hodor hodor hodor hodor; hodor hodor; hodor hodor? Hodor hodor, hodor. Hodor hodor; hodor hodor? Hodor. Hodor hodor - hodor? Hodor! Hodor hodor, hodor - hodor.
+					Hodor, hodor; hodor hodor - hodor?! Hodor. Hodor hodor - hodor... Hodor hodor hodor - hodor... Hodor hodor hodor? Hodor! Hodor hodor, hodor HODOR hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor - hodor hodor hodor! Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor, hodor. Hodor hodor. Hodor. Hodor. Hodor hodor, hodor. Hodor hodor - hodor hodor!
+				</p>
 			</div>
 			<div class='step' data-step='4'>
-				<p>STEP 4</p>
+				<p>Hodor! Hodor hodor, hodor - hodor, hodor, hodor hodor. Hodor. Hodor hodor hodor hodor; hodor hodor; hodor hodor? Hodor hodor, hodor. Hodor hodor; hodor hodor? Hodor. Hodor hodor - hodor? Hodor! Hodor hodor, hodor - hodor.
+					Hodor, hodor; hodor hodor - hodor?! Hodor. Hodor hodor - hodor... Hodor hodor hodor - hodor... Hodor hodor hodor? Hodor! Hodor hodor, hodor HODOR hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor - hodor hodor hodor! Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor, hodor. Hodor hodor. Hodor. Hodor. Hodor hodor, hodor. Hodor hodor - hodor hodor!
+				</p>
 			</div>
 		</div>
 	</section>
