--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</section>
 	<section id='scroll'>
 		<div class='scroll__graphic'>
-			<div class='chart'>
+			<div class='scrollmap'>
 				<p>0</p>
 			</div>
 		</div>
@@ -39,11 +39,6 @@
 				</p>
 			</div>
 			<div class='step' data-step='3'>
-				<p>Hodor! Hodor hodor, hodor - hodor, hodor, hodor hodor. Hodor. Hodor hodor hodor hodor; hodor hodor; hodor hodor? Hodor hodor, hodor. Hodor hodor; hodor hodor? Hodor. Hodor hodor - hodor? Hodor! Hodor hodor, hodor - hodor.
-					Hodor, hodor; hodor hodor - hodor?! Hodor. Hodor hodor - hodor... Hodor hodor hodor - hodor... Hodor hodor hodor? Hodor! Hodor hodor, hodor HODOR hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor - hodor hodor hodor! Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor, hodor. Hodor hodor. Hodor. Hodor. Hodor hodor, hodor. Hodor hodor - hodor hodor!
-				</p>
-			</div>
-			<div class='step' data-step='4'>
 				<p>Hodor! Hodor hodor, hodor - hodor, hodor, hodor hodor. Hodor. Hodor hodor hodor hodor; hodor hodor; hodor hodor? Hodor hodor, hodor. Hodor hodor; hodor hodor? Hodor. Hodor hodor - hodor? Hodor! Hodor hodor, hodor - hodor.
 					Hodor, hodor; hodor hodor - hodor?! Hodor. Hodor hodor - hodor... Hodor hodor hodor - hodor... Hodor hodor hodor? Hodor! Hodor hodor, hodor HODOR hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor - hodor hodor hodor! Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor, hodor. Hodor hodor. Hodor. Hodor. Hodor hodor, hodor. Hodor hodor - hodor hodor!
 				</p>
