--- a/index.html
+++ b/index.html
@@ -29,27 +29,46 @@
 		</div>
 		<div class='scroll__text'>
 			<div class='step' data-step='1'>
-				<p>Hodor! Hodor hodor, hodor - hodor, hodor, hodor hodor. Hodor. Hodor hodor hodor hodor; hodor hodor; hodor hodor? Hodor hodor, hodor. Hodor hodor; hodor hodor? Hodor. Hodor hodor - hodor? Hodor! Hodor hodor, hodor - hodor.
-					Hodor, hodor; hodor hodor - hodor?! Hodor. Hodor hodor - hodor... Hodor hodor hodor - hodor... Hodor hodor hodor? Hodor! Hodor hodor, hodor HODOR hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor - hodor hodor hodor! Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor, hodor. Hodor hodor. Hodor. Hodor. Hodor hodor, hodor. Hodor hodor - hodor hodor!
-				</p>
+				<p>La- da- da- da- dah. Just be happy. Now let's put some happy little clouds in here. From all of us here, I want to wish you happy painting and God bless, my friends. If you've been in Alaska less than a year you're a Cheechako.</p>
+				<p>What the devil. It just happens - whether or not you worried about it or tried to plan it. You can do anything here. So don't worry about it.</p>
+				<p>There's not a thing in the world wrong with washing your brush. All you have to do is let your imagination go wild. You can work and carry-on and put lots of little happy things in here. Just think about these things in your mind - then bring them into your world. Let your imagination be your guide.</p>
 			</div>
 			<div class='step' data-step='2'>
-				<p>Hodor! Hodor hodor, hodor - hodor, hodor, hodor hodor. Hodor. Hodor hodor hodor hodor; hodor hodor; hodor hodor? Hodor hodor, hodor. Hodor hodor; hodor hodor? Hodor. Hodor hodor - hodor? Hodor! Hodor hodor, hodor - hodor.
-					Hodor, hodor; hodor hodor - hodor?! Hodor. Hodor hodor - hodor... Hodor hodor hodor - hodor... Hodor hodor hodor? Hodor! Hodor hodor, hodor HODOR hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor - hodor hodor hodor! Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor, hodor. Hodor hodor. Hodor. Hodor. Hodor hodor, hodor. Hodor hodor - hodor hodor!
-				</p>
+				<p>Trees grow however makes them happy. Let's give him a friend too. Everybody needs a friend. You don't have to be crazy to do this but it does help.</p>
+				<p>I want everbody to be happy. That's what it's all about. Get tough with it, get strong. A happy cloud.</p>
+				<p>Isn't that fantastic? You can just push a little tree out of your brush like that. I guess I'm a little weird. I like to talk to trees and animals. That's okay though; I have more fun than most people. Have fun with it.</p>
 			</div>
 			<div class='step' data-step='3'>
-				<p>Hodor! Hodor hodor, hodor - hodor, hodor, hodor hodor. Hodor. Hodor hodor hodor hodor; hodor hodor; hodor hodor? Hodor hodor, hodor. Hodor hodor; hodor hodor? Hodor. Hodor hodor - hodor? Hodor! Hodor hodor, hodor - hodor.
-					Hodor, hodor; hodor hodor - hodor?! Hodor. Hodor hodor - hodor... Hodor hodor hodor - hodor... Hodor hodor hodor? Hodor! Hodor hodor, hodor HODOR hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor - hodor hodor hodor! Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor, hodor. Hodor hodor. Hodor. Hodor. Hodor hodor, hodor. Hodor hodor - hodor hodor!
-				</p>
+				<p>Now we'll take the almighty fan brush. Mix your color marbly don't mix it dead. I'll go over the colors one more time that we use: Titanium white, Thalo green, Prussian blue, Van Dyke brown, Alizarin crimson, Sap green, Cad yellow, and Permanent red. If there's two big trees invariably sooner or later there's gonna be a little tree.</p>
+				<p>That is when you can experience true joy, when you have no fear. Let's have a nice tree right here. Let's put some happy little clouds in our world.</p>
+				<p>Let's give him a friend too. Everybody needs a friend. It's almost like something out of a fairytale book. If it's not what you want - stop and change it. Don't just keep going and expect it will get better. Get away from those little Christmas tree things we used to make in school. You can do anything here - the only pre-requisite is that it makes you happy.</p>
 			</div>
 		</div>
 	</section>
 	</div>
-	<div id='interactivemap'></div>
-	<div id='outro'>
-		<p>outro</p>
+	<div id='interactivemap'>
 	</div>
+	<div id='outro'>
+		<h1 class='outro__hed'>Conclusion</h1>
+		<p class='outro__dek'>
+			Progress and Access
+		</p>
+	</div>
+
+	<div id="ui-controls">
+		<h3>Select a Layer</h3>
+		<input type="checkbox" name="bitnodes_data">
+		<label>Bitnodes</label><br>
+		<input type="checkbox" name="landingPoints">
+		<label>Landing Points</label><br>
+		<input type="checkbox" name="cables">
+		<label>Cables</label><br>
+		<input type="checkbox" name="bitnodes_density">
+		<label>Bitnodes Density</label><br>
+		<input type="checkbox" name="landingPoint_density">
+		<label>Landing Points Density</label><br>
+	</div>
+
 
 	<script src='https://d3js.org/d3.v5.js'></script>
 	<script src="https://unpkg.com/topojson@3"></script>
