added flow control for scrollmap.js, cleaned up code in index, css, interactivemap.js

--- a/index.html
+++ b/index.html
@@ -8,43 +8,42 @@
 	<meta name="description" content="The Bitcoin Labor Economy: Global Footprint and Issues of Access (2018)">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
-	<link href="css/styles.css" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+	<link href="css/styles.css" rel="stylesheet" />
 
 </head>
 
 <body>
 	<div>
-	<section id='intro'>
-		<h1 class='intro__hed'>The Bitcoin Labor Economy</h1>
-		<p class='intro__dek'>
-			Global Footprint and Issues of Access (2018)
-		</p>
-	</section>
-	<section id='scroll'>
-		<div class='scroll__graphic'>
-			<div class='scrollmap'>
-
+		<section id='intro'>
+			<h1 class='intro__hed'>The Bitcoin Labor Economy</h1>
+			<p class='intro__dek'>
+				Global Footprint and Issues of Access (2018)
+			</p>
+		</section>
+		<section id='scroll'>
+			<div class='scroll__graphic'>
+				<div class='scrollmap'></div>
 			</div>
-		</div>
-		<div class='scroll__text'>
-			<div class='step' data-step='1'>
-				<p>La- da- da- da- dah. Just be happy. Now let's put some happy little clouds in here. From all of us here, I want to wish you happy painting and God bless, my friends. If you've been in Alaska less than a year you're a Cheechako.</p>
-				<p>What the devil. It just happens - whether or not you worried about it or tried to plan it. You can do anything here. So don't worry about it.</p>
-				<p>There's not a thing in the world wrong with washing your brush. All you have to do is let your imagination go wild. You can work and carry-on and put lots of little happy things in here. Just think about these things in your mind - then bring them into your world. Let your imagination be your guide.</p>
+			<div class='scroll__text'>
+				<div class='step' data-step='1'>
+					<p>La- da- da- da- dah. Just be happy. Now let's put some happy little clouds in here. From all of us here, I want to wish you happy painting and God bless, my friends. If you've been in Alaska less than a year you're a Cheechako.</p>
+					<p>What the devil. It just happens - whether or not you worried about it or tried to plan it. You can do anything here. So don't worry about it.</p>
+					<p>There's not a thing in the world wrong with washing your brush. All you have to do is let your imagination go wild. You can work and carry-on and put lots of little happy things in here. Just think about these things in your mind - then bring them
+						into your world. Let your imagination be your guide.</p>
+				</div>
+				<div class='step' data-step='2'>
+					<p>Trees grow however makes them happy. Let's give him a friend too. Everybody needs a friend. You don't have to be crazy to do this but it does help.</p>
+					<p>I want everbody to be happy. That's what it's all about. Get tough with it, get strong. A happy cloud.</p>
+					<p>Isn't that fantastic? You can just push a little tree out of your brush like that. I guess I'm a little weird. I like to talk to trees and animals. That's okay though; I have more fun than most people. Have fun with it.</p>
+				</div>
+				<div class='step' data-step='3'>
+					<p>Now we'll take the almighty fan brush. Mix your color marbly don't mix it dead. I'll go over the colors one more time that we use: Titanium white, Thalo green, Prussian blue, Van Dyke brown, Alizarin crimson, Sap green, Cad yellow, and Permanent
+						red. If there's two big trees invariably sooner or later there's gonna be a little tree.</p>
+					<p>That is when you can experience true joy, when you have no fear. Let's have a nice tree right here. Let's put some happy little clouds in our world.</p>
+				</div>
 			</div>
-			<div class='step' data-step='2'>
-				<p>Trees grow however makes them happy. Let's give him a friend too. Everybody needs a friend. You don't have to be crazy to do this but it does help.</p>
-				<p>I want everbody to be happy. That's what it's all about. Get tough with it, get strong. A happy cloud.</p>
-				<p>Isn't that fantastic? You can just push a little tree out of your brush like that. I guess I'm a little weird. I like to talk to trees and animals. That's okay though; I have more fun than most people. Have fun with it.</p>
-			</div>
-			<div class='step' data-step='3'>
-				<p>Now we'll take the almighty fan brush. Mix your color marbly don't mix it dead. I'll go over the colors one more time that we use: Titanium white, Thalo green, Prussian blue, Van Dyke brown, Alizarin crimson, Sap green, Cad yellow, and Permanent red. If there's two big trees invariably sooner or later there's gonna be a little tree.</p>
-				<p>That is when you can experience true joy, when you have no fear. Let's have a nice tree right here. Let's put some happy little clouds in our world.</p>
-				<p>Let's give him a friend too. Everybody needs a friend. It's almost like something out of a fairytale book. If it's not what you want - stop and change it. Don't just keep going and expect it will get better. Get away from those little Christmas tree things we used to make in school. You can do anything here - the only pre-requisite is that it makes you happy.</p>
-			</div>
-		</div>
-	</section>
+		</section>
 	</div>
 	<div id='interactivemap'>
 	</div>
@@ -72,7 +71,7 @@
 
 	<script src='https://d3js.org/d3.v5.js'></script>
 	<script src="https://unpkg.com/topojson@3"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.7.4/polyfill.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.7.4/polyfill.min.js"></script>
 	<script src='https://unpkg.com/intersection-observer'></script>
 	<script src='https://unpkg.com/scrollama'></script>
 	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
