scroll map function correct - up and down, width/height change to SVG element

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 				<div class='scrollmap'></div>
 			</div>
 			<div class='scroll__text'>
+				<div class='step' data-step='0'>
+					<p>La- da- da- da- dah. Just be happy. Now let's put some happy little clouds in here. From all of us here, I want to wish you happy painting and God bless, my friends. If you've been in Alaska less than a year you're a Cheechako.</p>
+				</div>
 				<div class='step' data-step='1'>
 					<p>La- da- da- da- dah. Just be happy. Now let's put some happy little clouds in here. From all of us here, I want to wish you happy painting and God bless, my friends. If you've been in Alaska less than a year you're a Cheechako.</p>
 					<p>What the devil. It just happens - whether or not you worried about it or tried to plan it. You can do anything here. So don't worry about it.</p>
