adjusted css for step text, intro, outro/added text, divs, custom hr to index.html, adjusted scrollmap trigger point

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 	<div>
 		<section id='intro'>
 			<h1 class='intro__hed'>The Bitcoin Labor Economy</h1>
-			<p class='intro__dek'>
+			<h3 class='intro__dek'>
 				Global Footprint and Issues of Access (2018)
-			</p>
+			</h3>
+			<hr>
+			<p class="intro__dek">In the past decade, cryptocurrencies and blockchains have become a force to be reckoned with in terms of technological innovations and potential socio-economic impact. However, due to the manner in which blockchain-based technologies operate, it runs the risk of reproducing existing inequalities. The inequality in question here is that surrounding digital divide</p>
+			<p class="intro__dek">- the uneven distribution and development of information and communication technologies (ICT) from local areas to the global commons -</p>
+			<p class="intro__dek">and the global distribution of Bitcoin mining.</p>
+			<hr>
 		</section>
 		<section id='scroll'>
 			<div class='scroll__graphic'>
@@ -27,35 +32,42 @@
 			</div>
 			<div class='scroll__text'>
 				<div class='step' data-step='0'>
-					<p>La- da- da- da- dah. Just be happy. Now let's put some happy little clouds in here. From all of us here, I want to wish you happy painting and God bless, my friends. If you've been in Alaska less than a year you're a Cheechako.</p>
+					<p>Bitcoin mining is truly a global phenomena.<br><br>
+						As we can see using data from Bitnodes, the distribution of miners around the world is highly concentrated in North America and Europe. These are parts of the world in which ICT infrastructure was first developed and most frequently updated with the most modern hardware and software techniques.</p>
 				</div>
 				<div class='step' data-step='1'>
-					<p>La- da- da- da- dah. Just be happy. Now let's put some happy little clouds in here. From all of us here, I want to wish you happy painting and God bless, my friends. If you've been in Alaska less than a year you're a Cheechako.</p>
-					<p>What the devil. It just happens - whether or not you worried about it or tried to plan it. You can do anything here. So don't worry about it.</p>
-					<p>There's not a thing in the world wrong with washing your brush. All you have to do is let your imagination go wild. You can work and carry-on and put lots of little happy things in here. Just think about these things in your mind - then bring them
-						into your world. Let your imagination be your guide.</p>
+					<p>This is largely due to how the Internet and it’s infrastructure was originally deployed.<br><br>
+						Many of the major points of access are located along the coast of North America and Europe as a result of early deployments and adoption of infrastructure that now constitutes the World Wide Web.</p>
 				</div>
 				<div class='step' data-step='2'>
-					<p>Trees grow however makes them happy. Let's give him a friend too. Everybody needs a friend. You don't have to be crazy to do this but it does help.</p>
-					<p>I want everbody to be happy. That's what it's all about. Get tough with it, get strong. A happy cloud.</p>
-					<p>Isn't that fantastic? You can just push a little tree out of your brush like that. I guess I'm a little weird. I like to talk to trees and animals. That's okay though; I have more fun than most people. Have fun with it.</p>
+					<p>For example, the deployment of submarine cables as seen here were extremely expensive.<br><br>
+						However, the nations and corporations funding the development of infrastructure optimized connectivity from themselves to other wealthier areas of the world that were also looking for ways to “shrink” communication distance.<br><br>
+						This means that those citizens in these areas were optimally situated to enter, compete, and benefit from new blockchain-based technologies.</p>
 				</div>
 				<div class='step' data-step='3'>
-					<p>Now we'll take the almighty fan brush. Mix your color marbly don't mix it dead. I'll go over the colors one more time that we use: Titanium white, Thalo green, Prussian blue, Van Dyke brown, Alizarin crimson, Sap green, Cad yellow, and Permanent
-						red. If there's two big trees invariably sooner or later there's gonna be a little tree.</p>
-					<p>That is when you can experience true joy, when you have no fear. Let's have a nice tree right here. Let's put some happy little clouds in our world.</p>
+					<p><strong>Select a layer below and then hover over the objects to access feature information.<br><br>
+						Use the zoom controls to view smaller areas.</strong></p>
 				</div>
 			</div>
 		</section>
 	</div>
-	<div id='interactivemap'>
-	</div>
+	<hr>
+	<div id='interactivemap'></div>
+	<br>
 	<div id='outro'>
 		<h1 class='outro__hed'>Conclusion</h1>
+		<hr>
 		<p class='outro__dek'>
 			Progress and Access
 		</p>
+		<hr>
+		<p class="outro__dek">One of the primary points of contention with new technologies is the matter of who has access to them.</p>
+		<p class="outro__dek">Despite the distributed nature of blockchain technologies, access remains an issue as those best situated in relation to existing ICT infrastructure are those who will ultimately benefit from their use.</p>
+		<p class="outro__dek">Much has yet to be done in terms of design, scalability, and latency is blockchain technologies are to be considered liberatory or revolutionary for everyone.</p>
 	</div>
+	<footer>
+
+	</footer>
 
 	<div id="ui-controls">
 		<h3>Select a Layer</h3>
