--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 		<section id='intro'>
 			<h1 class='intro__hed'>The Bitcoin Labor Economy</h1>
 			<h3 class='intro__dek'>
-				Global Footprint and Issues of Access (2018)
+				Global Footprint and Issues of Access<br>
+				- 2018 -
 			</h3>
 			<hr>
-			<p class="intro__dek">In the past decade, cryptocurrencies and blockchains have become a force to be reckoned with in terms of technological innovations and potential socio-economic impact. However, due to the manner in which blockchain-based technologies operate, it runs the risk of reproducing existing inequalities. The inequality in question here is that surrounding digital divide</p>
+			<p class="intro__dek">In the past decade, cryptocurrencies and blockchains have become a force to be reckoned with in terms of technological innovations and potential socio-economic impact. However, due to the manner in which blockchain-based technologies operate, they run the risk of reproducing existing inequalities. The inequality in question here is that surrounding digital divide</p>
 			<p class="intro__dek">- the uneven distribution and development of information and communication technologies (ICT) from local areas to the global commons -</p>
-			<p class="intro__dek">and the global distribution of Bitcoin mining.</p>
+			<p class="intro__dek">and the global distribution of Bitcoin mining</p>
+			<p class="intro__dek">- a labor task facilitated by humans and machines in order to extract cryptocurrency rewards -</p>
 			<hr>
 		</section>
 		<section id='scroll'>
@@ -32,17 +34,17 @@
 			</div>
 			<div class='scroll__text'>
 				<div class='step' data-step='0'>
-					<p>Bitcoin mining is truly a global phenomena.<br><br>
+					<p><strong>Bitcoin mining</strong> is truly a global phenomena.<br><br>
 						As we can see using data from Bitnodes, the distribution of miners around the world is highly concentrated in North America and Europe. These are parts of the world in which ICT infrastructure was first developed and most frequently updated with the most modern hardware and software techniques.</p>
 				</div>
 				<div class='step' data-step='1'>
 					<p>This is largely due to how the Internet and it’s infrastructure was originally deployed.<br><br>
-						Many of the major points of access are located along the coast of North America and Europe as a result of early deployments and adoption of infrastructure that now constitutes the World Wide Web.</p>
+						Many of the <strong>major points of access</strong> are located along the coast of North America and Europe as a result of early deployments and adoption of infrastructure that now constitutes the Internet.</p>
 				</div>
 				<div class='step' data-step='2'>
-					<p>For example, the deployment of submarine cables as seen here were extremely expensive.<br><br>
-						However, the nations and corporations funding the development of infrastructure optimized connectivity from themselves to other wealthier areas of the world that were also looking for ways to “shrink” communication distance.<br><br>
-						This means that those citizens in these areas were optimally situated to enter, compete, and benefit from new blockchain-based technologies.</p>
+					<p>For example, the deployment of <strong>submarine cables</strong> as seen here were extremely expensive.<br><br>
+						The nations and corporations funding the development of this infrastructure optimized connectivity from themselves to other wealthier areas of the world that were also looking for ways to “shrink” communication distance.<br><br>
+						This means that citizens in these areas are optimally situated to enter, compete, and benefit from new blockchain-based technologies.</p>
 				</div>
 				<div class='step' data-step='3'>
 					<p><strong>Select a layer below and then hover over the objects to access feature information.<br><br>
@@ -57,13 +59,9 @@
 	<div id='outro'>
 		<h1 class='outro__hed'>Conclusion</h1>
 		<hr>
-		<p class='outro__dek'>
-			Progress and Access
-		</p>
-		<hr>
 		<p class="outro__dek">One of the primary points of contention with new technologies is the matter of who has access to them.</p>
-		<p class="outro__dek">Despite the distributed nature of blockchain technologies, access remains an issue as those best situated in relation to existing ICT infrastructure are those who will ultimately benefit from their use.</p>
-		<p class="outro__dek">Much has yet to be done in terms of design, scalability, and latency is blockchain technologies are to be considered liberatory or revolutionary for everyone.</p>
+		<p class="outro__dek">Despite the distributed nature of blockchain technologies, access remains an issue as those best located near existing ICT infrastructure are those who will ultimately benefit from their use.</p>
+		<p class="outro__dek">Much has yet to be done in terms of design, scalability, and latency if blockchain technologies are to be considered liberatory or revolutionary for everyone.</p>
 	</div>
 	<footer>
 
