added footer to index.html with css styling

--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@
 		<p class="outro__dek">Despite the distributed nature of blockchain technologies, access remains an issue as those best located near existing ICT infrastructure are those who will ultimately benefit from their use.</p>
 		<p class="outro__dek">Much has yet to be done in terms of design, scalability, and latency if blockchain technologies are to be considered liberatory or revolutionary for everyone.</p>
 	</div>
-	<footer>
-
+	<hr>
+	<footer class="footer">
+		<h3><strong>References</strong></h3>
+		<p>Map created by: <a href="https://thejoeblankenship.com" target="_blank">Joe Blankenship</a></p>
+		<p>
+			Data Sources: <a href="https://bitnodes.earn.com/api/" target="_blank">Bitnodes</a>,
+						<a href="https://github.com/telegeography/www.submarinecablemap.com" target="_blank">TeleGeography</a>,
+						<a href="http://www.naturalearthdata.com/" target="_blank">Natural Earth</a>
+		</p>
 	</footer>
 
 	<div id="ui-controls">
