addition styling to text for ease of reading

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 				- 2018 -
 			</h3>
 			<hr>
-			<p class="intro__dek">In the past decade, cryptocurrencies and blockchains have become a force to be reckoned with in terms of technological innovations and potential socio-economic impact. However, due to the manner in which blockchain-based technologies operate, they run the risk of reproducing existing inequalities. The inequality in question here is that surrounding digital divide</p>
+			<p class="intro__dek">In the past decade, <strong>cryptocurrencies and blockchains</strong> have become a force to be reckoned with in terms of technological <strong>innovation</strong>s and potential <strong>socio-economic impact</strong>. However, due to the manner in which blockchain-based technologies operate, they run the <strong>risk</strong> of reproducing existing <strong>inequalities</strong>. The inequality in question here is that surrounding <strong>digital divide</strong></p>
 			<p class="intro__dek">- the uneven distribution and development of information and communication technologies (ICT) from local areas to the global commons -</p>
-			<p class="intro__dek">and the global distribution of Bitcoin mining</p>
+			<p class="intro__dek">and the global distribution of <strong>Bitcoin mining</strong></p>
 			<p class="intro__dek">- a labor task facilitated by humans and machines in order to extract cryptocurrency rewards -</p>
 			<hr>
 		</section>
@@ -59,9 +59,9 @@
 	<div id='outro'>
 		<h1 class='outro__hed'>Conclusion</h1>
 		<hr>
-		<p class="outro__dek">One of the primary points of contention with new technologies is the matter of who has access to them.</p>
-		<p class="outro__dek">Despite the distributed nature of blockchain technologies, access remains an issue as those best located near existing ICT infrastructure are those who will ultimately benefit from their use.</p>
-		<p class="outro__dek">Much has yet to be done in terms of design, scalability, and latency if blockchain technologies are to be considered liberatory or revolutionary for everyone.</p>
+		<p class="outro__dek">One of the primary points of contention with new technologies is the matter of <strong>who has access</strong> to them.</p>
+		<p class="outro__dek">Despite the distributed nature of blockchain technologies, access remains <strong>an issue</strong> as those best located near existing ICT infrastructure are those <strong>who will ultimately benefit</strong> from their use.</p>
+		<p class="outro__dek"><strong>Much has yet to be done</strong> in terms of design, scalability, and latency if blockchain technologies are to be considered liberatory or revolutionary for everyone.</p>
 	</div>
 	<hr>
 	<footer class="footer">
