additional styling changes to step text and references

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
 			</div>
 			<div class='scroll__text'>
 				<div class='step' data-step='0'>
-					<p><strong>Bitcoin mining</strong> is truly a global phenomena.<br><br>
+					<p><strong style="text-shadow: #dad147 1px 0 10px;">Bitcoin mining</strong> is truly a global phenomena.<br><br>
 						As we can see using data from Bitnodes, the distribution of miners around the world is highly concentrated in North America and Europe. These are parts of the world in which ICT infrastructure was first developed and most frequently updated with the most modern hardware and software techniques.</p>
 				</div>
 				<div class='step' data-step='1'>
 					<p>This is largely due to how the Internet and it’s infrastructure was originally deployed.<br><br>
-						Many of the <strong>major points of access</strong> are located along the coast of North America and Europe as a result of early deployments and adoption of infrastructure that now constitutes the Internet.</p>
+						Many of the <strong style="text-shadow: #ff5959 1px 0 10px;">major points of access</strong> are located along the coast of North America and Europe as a result of early deployments and adoption of infrastructure that now constitutes the Internet.</p>
 				</div>
 				<div class='step' data-step='2'>
-					<p>For example, the deployment of <strong>submarine cables</strong> as seen here were extremely expensive.<br><br>
+					<p>For example, the deployment of <strong style="text-shadow: #163bd6 1px 0 10px;">submarine cables</strong> as seen here were extremely expensive.<br><br>
 						The nations and corporations funding the development of this infrastructure optimized connectivity from themselves to other wealthier areas of the world that were also looking for ways to “shrink” communication distance.<br><br>
 						This means that citizens in these areas are optimally situated to enter, compete, and benefit from new blockchain-based technologies.</p>
 				</div>
 				<div class='step' data-step='3'>
-					<p><strong>Select a layer below and then hover over the objects to access feature information.<br><br>
+					<p><strong style="text-shadow: #FC0 1px 0 10px;">Select a layer below and then hover over the objects to access feature information.<br><br>
 						Use the zoom controls to view smaller areas.</strong></p>
 				</div>
 			</div>
@@ -65,7 +65,7 @@
 	</div>
 	<hr>
 	<footer class="footer">
-		<h3><strong>References</strong></h3>
+		<h3><strong style="text-shadow: #FC0 1px 0 10px;">References</strong></h3>
 		<p>Map created by: <a href="https://thejoeblankenship.com" target="_blank">Joe Blankenship</a></p>
 		<p>
 			Data Sources: <a href="https://bitnodes.earn.com/api/" target="_blank">Bitnodes</a>,
