update landingPoint styling, update UI widget styling, adjusted opacity for layers

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	</footer>
 
 	<div id="ui-controls">
-		<h3>Select a Layer</h3>
+		<h1><strong style="text-shadow: #FC0 1px 0 10px;">Select a Layer</strong></h1>
 		<input type="checkbox" name="bitnodes_data">
 		<label>Bitnodes</label><br>
 		<input type="checkbox" name="landingPoints">
