temporarily removed checkbox functionality

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		</p>
 	</footer>
 
-	<div id="ui-controls">
+	<!--<div id="ui-controls">
 		<h1><strong style="text-shadow: #FC0 1px 0 10px;">Select a Layer</strong></h1>
 		<input type="checkbox" name="bitnodes_data">
 		<label>Bitnodes</label><br>
@@ -86,7 +86,7 @@
 		<label>Bitnodes Density</label><br>
 		<input type="checkbox" name="landingPoint_density">
 		<label>Landing Points Density</label><br>
-	</div>
+	</div>-->
 
 
 	<script src='https://d3js.org/d3.v5.js'></script>
