updated content and removed unused code from index.html, updated styling for footer and links in css

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 						This means that citizens in these areas are optimally situated to enter, compete, and benefit from new blockchain-based technologies.</p>
 				</div>
 				<div class='step' data-step='3'>
-					<p><strong style="text-shadow: #FC0 1px 0 10px;">Select a layer below and then hover over the objects to access feature information.<br><br>
-						Use the zoom controls to view smaller areas.</strong></p>
+					<p><strong style="text-shadow: #FC0 1px 0 10px;">Select a layer below (upper right)</strong> and then <strong style="text-shadow: #FC0 1px 0 10px;">hover over the objects</strong> to access feature information.<br><br>
+						Use the <strong style="text-shadow: #FC0 1px 0 10px;">zoom controls (upper left)</strong> to view smaller areas.</p>
 				</div>
 			</div>
 		</section>
 	</div>
 	<hr>
 	<div id='interactivemap'></div>
-	<br>
+	<hr>
 	<div id='outro'>
 		<h1 class='outro__hed'>Conclusion</h1>
 		<hr>
@@ -65,29 +65,16 @@
 	</div>
 	<hr>
 	<footer class="footer">
-		<h3><strong style="text-shadow: #FC0 1px 0 10px;">References</strong></h3>
 		<p>Map created by: <a href="https://thejoeblankenship.com" target="_blank">Joe Blankenship</a></p>
 		<p>
 			Data Sources: <a href="https://bitnodes.earn.com/api/" target="_blank">Bitnodes</a>,
 						<a href="https://github.com/telegeography/www.submarinecablemap.com" target="_blank">TeleGeography</a>,
 						<a href="http://www.naturalearthdata.com/" target="_blank">Natural Earth</a>
 		</p>
+		<p>
+			Date of Information: 03 March, 2018
+		</p>
 	</footer>
-
-	<!--<div id="ui-controls">
-		<h1><strong style="text-shadow: #FC0 1px 0 10px;">Select a Layer</strong></h1>
-		<input type="checkbox" name="bitnodes_data">
-		<label>Bitnodes</label><br>
-		<input type="checkbox" name="landingPoints">
-		<label>Landing Points</label><br>
-		<input type="checkbox" name="cables">
-		<label>Cables</label><br>
-		<input type="checkbox" name="bitnodes_density">
-		<label>Bitnodes Density</label><br>
-		<input type="checkbox" name="landingPoint_density">
-		<label>Landing Points Density</label><br>
-	</div>-->
-
 
 	<script src='https://d3js.org/d3.v5.js'></script>
 	<script src="https://unpkg.com/topojson@3"></script>
