updated grammer for text

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 						As we can see using data from Bitnodes, the distribution of miners around the world is highly concentrated in North America and Europe. These are parts of the world in which ICT infrastructure was first developed and most frequently updated with the most modern hardware and software techniques.</p>
 				</div>
 				<div class='step' data-step='1'>
-					<p>This is largely due to how the Internet and it’s infrastructure was originally deployed.<br><br>
+					<p>This is largely due to how the Internet and its infrastructure was originally deployed.<br><br>
 						Many of the <strong style="text-shadow: #ff5959 1px 0 10px;">major points of access</strong> are located along the coast of North America and Europe as a result of early deployments and adoption of infrastructure that now constitutes the Internet.</p>
 				</div>
 				<div class='step' data-step='2'>
-					<p>For example, the deployment of <strong style="text-shadow: #163bd6 1px 0 10px;">submarine cables</strong> as seen here were extremely expensive.<br><br>
-						The nations and corporations funding the development of this infrastructure optimized connectivity from themselves to other wealthier areas of the world that were also looking for ways to “shrink” communication distance.<br><br>
+					<p>For example, the deployment of <strong style="text-shadow: #163bd6 1px 0 10px;">submarine cables</strong> as seen here was and is extremely expensive.<br><br>
+						The nations and corporations that have funded the development of this infrastructure optimized connectivity from themselves to other wealthy areas of the world that were looking to “shrink” communications distance.<br><br>
 						This means that citizens in these areas are optimally situated to enter, compete, and benefit from new blockchain-based technologies.</p>
 				</div>
 				<div class='step' data-step='3'>
@@ -62,7 +62,7 @@
 		<hr>
 		<p class="outro__dek">One of the primary points of contention with new technologies is the matter of <strong>who has access</strong> to them.</p>
 		<p class="outro__dek">Despite the distributed nature of blockchain technologies, access remains <strong>an issue</strong> as those best located near existing ICT infrastructure are those <strong>who will ultimately benefit</strong> from their use.</p>
-		<p class="outro__dek"><strong>Much has yet to be done</strong> in terms of design, scalability, and latency if blockchain technologies are to be considered liberatory or revolutionary for everyone.</p>
+		<p class="outro__dek"><strong>Much has yet to be done</strong> in terms of design, scalability, and latency if blockchain technologies are to be considered revolutionary for everyone.</p>
 	</div>
 	<hr>
 	<footer class="footer">
