fixed text highlighting

--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 			</div>
 			<div class='scroll__text'>
 				<div class='step' data-step='0'>
-					<p><strong style="text-shadow: #dad147 1px 0 10px;">Bitcoin mining</strong> is truly a global phenomena.<br><br>
+					<p><span class="highlight-yellow">Bitcoin mining</span> is truly a global phenomena.<br><br>
 						As we can see using data from Bitnodes, the distribution of miners around the world is highly concentrated in North America and Europe. These are parts of the world in which ICT infrastructure was first developed and most frequently updated with the most modern hardware and software techniques.</p>
 				</div>
 				<div class='step' data-step='1'>
 					<p>This is largely due to how the Internet and its infrastructure was originally deployed.<br><br>
-						Many of the <strong style="text-shadow: #ff5959 1px 0 10px;">major points of access</strong> are located along the coast of North America and Europe as a result of early deployments and adoption of infrastructure that now constitutes the Internet.</p>
+						Many of the <span class="highlight-red">major points of access</span> are located along the coast of North America and Europe as a result of early deployments and adoption of infrastructure that now constitutes the Internet.</p>
 				</div>
 				<div class='step' data-step='2'>
-					<p>For example, the deployment of <strong style="text-shadow: #163bd6 1px 0 10px;">submarine cables</strong> as seen here was and is extremely expensive.<br><br>
+					<p>For example, the deployment of <span class="highlight-blue">submarine cables</span> as seen here was and is extremely expensive.<br><br>
 						The nations and corporations that have funded the development of this infrastructure optimized connectivity from themselves to other wealthy areas of the world that were looking to “shrink” communications distance.<br><br>
 						This means that citizens in these areas are optimally situated to enter, compete, and benefit from new blockchain-based technologies.</p>
 				</div>
 				<div class='step' data-step='3'>
-					<p><strong style="text-shadow: #FC0 1px 0 10px;">Select a layer below (upper right)</strong> and then <strong style="text-shadow: #FC0 1px 0 10px;">hover over the objects</strong> to access feature information.<br><br>
-						Use the <strong style="text-shadow: #FC0 1px 0 10px;">zoom controls (upper left)</strong> to view smaller areas.</p>
+					<p><span class="highlight-yellow">Select a layer below (upper right)</span> and then <span class="highlight-yellow">hover over the objects</span> to access feature information.<br><br>
+						Use the <span class="highlight-yellow">zoom controls (upper left)</span> to view smaller areas.</p>
 				</div>
 			</div>
 		</section>
