tidy up code format

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="The Bitcoin Labor Economy: Global Footprint and Issues of Access (2018)">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
 	<link href="css/styles.css" rel="stylesheet" />
 
@@ -23,7 +23,8 @@
 				- 2018 -
 			</h3>
 			<hr>
-			<p class="intro__dek">In the past decade, <strong>cryptocurrencies and blockchains</strong> have become a force to be reckoned with in terms of technological <strong>innovation</strong>s and potential <strong>socio-economic impact</strong>. However, due to the manner in which blockchain-based technologies operate, they run the <strong>risk</strong> of reproducing existing <strong>inequalities</strong>. The inequality in question here is that surrounding <strong>digital divide</strong></p>
+			<p class="intro__dek">In the past decade, <strong>cryptocurrencies and blockchains</strong> have become a force to be reckoned with in terms of technological <strong>innovation</strong>s and potential <strong>socio-economic impact</strong>. However, due to the manner in
+				which blockchain-based technologies operate, they run the <strong>risk</strong> of reproducing existing <strong>inequalities</strong>. The inequality in question here is that surrounding <strong>digital divide</strong></p>
 			<p class="intro__dek">- the uneven distribution and development of information and communication technologies (ICT) from local areas to the global commons -</p>
 			<p class="intro__dek">and the global distribution of <strong>Bitcoin mining</strong></p>
 			<p class="intro__dek">- a labor task facilitated by humans and machines in order to extract cryptocurrency rewards -</p>
@@ -35,21 +36,19 @@
 			</div>
 			<div class='scroll__text'>
 				<div class='step' data-step='0'>
-					<p><span class="highlight-yellow">Bitcoin mining</span> is truly a global phenomena.<br><br>
-						As we can see using data from Bitnodes, the distribution of miners around the world is highly concentrated in North America and Europe. These are parts of the world in which ICT infrastructure was first developed and most frequently updated with the most modern hardware and software techniques.</p>
+					<p><span class="highlight-yellow">Bitcoin mining</span> is truly a global phenomena.<br><br> As we can see using data from Bitnodes, the distribution of miners around the world is highly concentrated in North America and Europe. These are parts of the
+						world in which ICT infrastructure was first developed and most frequently updated with the most modern hardware and software techniques.</p>
 				</div>
 				<div class='step' data-step='1'>
-					<p>This is largely due to how the Internet and its infrastructure was originally deployed.<br><br>
-						Many of the <span class="highlight-red">major points of access</span> are located along the coast of North America and Europe as a result of early deployments and adoption of infrastructure that now constitutes the Internet.</p>
+					<p>This is largely due to how the Internet and its infrastructure was originally deployed.<br><br> Many of the <span class="highlight-red">major points of access</span> are located along the coast of North America and Europe as a result of early deployments
+						and adoption of infrastructure that now constitutes the Internet.</p>
 				</div>
 				<div class='step' data-step='2'>
-					<p>For example, the deployment of <span class="highlight-blue">submarine cables</span> as seen here was and is extremely expensive.<br><br>
-						The nations and corporations that have funded the development of this infrastructure optimized connectivity from themselves to other wealthy areas of the world that were looking to “shrink” communications distance.<br><br>
-						This means that citizens in these areas are optimally situated to enter, compete, and benefit from new blockchain-based technologies.</p>
+					<p>For example, the deployment of <span class="highlight-blue">submarine cables</span> as seen here was and is extremely expensive.<br><br> The nations and corporations that have funded the development of this infrastructure optimized connectivity from
+						themselves to other wealthy areas of the world that were looking to “shrink” communications distance.<br><br> This means that citizens in these areas are optimally situated to enter, compete, and benefit from new blockchain-based technologies.</p>
 				</div>
 				<div class='step' data-step='3'>
-					<p><span class="highlight-yellow">Select a layer below (upper right)</span> and then <span class="highlight-yellow">hover over the objects</span> to access feature information.<br><br>
-						Use the <span class="highlight-yellow">zoom controls (upper left)</span> to view smaller areas.</p>
+					<p><span class="highlight-yellow">Select a layer below (upper right)</span> and then <span class="highlight-yellow">hover over the objects</span> to access feature information.<br><br> Use the <span class="highlight-yellow">zoom controls (upper left)</span>						to view smaller areas.</p>
 				</div>
 			</div>
 		</section>
@@ -69,8 +68,8 @@
 		<p>Map created by: <a href="https://thejoeblankenship.com" target="_blank">Joe Blankenship</a></p>
 		<p>
 			Data Sources: <a href="https://bitnodes.earn.com/api/" target="_blank">Bitnodes</a>,
-						<a href="https://github.com/telegeography/www.submarinecablemap.com" target="_blank">TeleGeography</a>,
-						<a href="http://www.naturalearthdata.com/" target="_blank">Natural Earth</a>
+			<a href="https://github.com/telegeography/www.submarinecablemap.com" target="_blank">TeleGeography</a>,
+			<a href="http://www.naturalearthdata.com/" target="_blank">Natural Earth</a>
 		</p>
 		<p>
 			Date of Information: 03 March, 2018
